week3/network-policy/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: network-security-lab
  labels:
    app: backend
spec:
  containers:
  - name: backend
    image: nginx
